# project

./: CMakeLists.txt  main.cpp
3rd/lib/: fmt.lib  fmtd.lib  glog.lib  glogd.lib  libcurl.lib  libcurld.lib  libuvd.lib
CenterServer/: CMakeLists.txt  CenterServer.cpp  CenterServer.h  ServerItem.cpp  ServerItem.h  ServerManager.cpp  ServerManager.h  main.cpp
Common/: Define.h  InternalMsg.h  Message.h
DBServer/: CMD.h  CMakeLists.txt  DBServer.cpp  DBServer.h  main.cpp
GateServer/: GateServer.cpp  GateServer.h  main.cpp
LoginServer/: CMD.h  CMakeLists.txt  ClientMessageHandle.cpp  DBMessageHandle.cpp  GroupManager.cpp  GroupManager.h  LoginServer.cpp  LoginServer.h  UserFriendManager.cpp  UserFriendManager.h  UserItem.cpp  UserItem.h  UserManager.cpp  UserManager.h  main.cpp
ServerEngine/: CMakeLists.txt  Connection.cpp  Connection.h  CppMysql.cpp  CppMysql.h  EventDispatcher.cpp  EventDispatcher.h  HttpClient.cpp  HttpClient.h  Logger.cpp  Logger.h  MYSQLPool.cpp  MYSQLPool.h  MemoryStream.cpp  MemoryStream.h  PacketHelper.h  ServerEngine.h  Signal.cpp  Signal.h  SpinLock.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  stdafx.h
msvc/: server.sln
msvc/CenterServer/: CenterServer.vcxproj  CenterServer.vcxproj.filters
msvc/DBServer/: DBServer.vcxproj  DBServer.vcxproj.filters
msvc/GateServer/: GateServer.vcxproj  GateServer.vcxproj.filters
msvc/LoginServer/: LoginServer.vcxproj  LoginServer.vcxproj.filters
msvc/Project1/: Project1.vcxproj  源.cpp
msvc/ServerEngine/: ServerEngine.vcxproj  (+1 more)
(+2 files in other folders)
